<resources>
    <string name="app_name">Premedic Care</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="diabetes">Diabetes</string>
    <string name="heart">Heart</string>
    <string name="breast_cancer">Breast Cancer</string>
    <string name="liver_disease">Liver Disease</string>
    <string name="chronic_kidney">Chronic Kidney</string>
    <string name="malaria">Malaria</string>
    <string name="pneumonia">Pneumonia</string>
    <string name="diabetic_reinopathy">Diabetic Retinopathy</string>
    <string name="splash_logo">Logo of the app</string>
    <string name="department">Departments</string>
    <string name="blog">Blog</string>
    <string name="doctors">Doctors</string>
    <string name="about">About Us</string>
    <string name="contact">Contact Us</string>
    <string name="address">King\'s Palace 9(a), Kiit University, Patia, Bhubaneshwar,Odisha-751024</string>
    <string name="phone">+91 7735866609</string>
    <string name="email">piyushsinghpk21@yahoo.com</string>
    <string name="ok">OK</string>
</resources>
