<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp"
    android:orientation="vertical">
<TextView
    android:drawableStart="@drawable/ic_locatepiyush"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:padding="10dp"
    android:text="@string/address"
    android:id="@+id/dialog"/>
    <TextView
        android:drawableStart="@drawable/ic_baseline_phone_24"
        android:layout_width="wrap_content"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        android:autoLink="phone"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:id="@+id/phone"/>
    <TextView
        android:drawableStart="@drawable/ic_mailpiyush"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:id="@+id/email"
        android:text="@string/email"/>
    <Button
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:id="@+id/ok"
        android:text="@string/ok"/>
</LinearLayout>